--- a/Sites/site_institucional/css/sobre.css
+++ b/Sites/site_institucional/css/sobre.css
@@ -277,6 +277,58 @@ Time MIND6
     color: #f2f2f2;
 }
 
-@media (max-width: 1724px) {
-    .mvv h3 {}
+@media only screen and (min-width: 600px) {
+    .laboratorio {
+        height: 498px;
+        width: 770px;
+        background: url(../img/fundosobre.jpg)center no-repeat;
+    }
+
+    .laboratorio div {
+        height: 449px;
+        width: 770px;
+    }
+
+    .cor h1 {
+        font-size: 70px;
+    }
+
+    .info {
+        margin: -25px 20px 20px 9px;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .info .aboutUs {
+        width: 760px;
+        /* margin: 24px 0px 11px 0px; */
+    }
+
+    .aboutUs__p p {
+        text-align: justify;
+    }
+
+    .cardsTeam {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        height: auto;
+    }
+
+    #Team {
+        width: 769px;
+    }
+
+    .card h1 {
+        font-size: 30px;
+    }
+
+    .container-card {
+        /* margin: 0 auto; */
+        margin-left: 115px;
+    }
+
+    lottie-player.lott {
+        width: 488px;
+        height: 300px;
+    }
 }
