--- a/software/dotControllTec/src/main/java/com/mycompany/dotcontrolltec/TelaLogin.form
+++ b/software/dotControllTec/src/main/java/com/mycompany/dotcontrolltec/TelaLogin.form
@@ -164,7 +164,7 @@
               <Color blue="40" green="26" red="14" type="rgb"/>
             </Property>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-              <Color id="Cursor Padr&#xe3;o"/>
+              <Color id="Default Cursor"/>
             </Property>
           </Properties>
           <Events>
