--- a/Sites/site_institucional/css/menu.css
+++ b/Sites/site_institucional/css/menu.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Krona+One&display=swap');
-
+body {
+    overflow-x: hidden;
+}
 * {
     margin: 0;
     padding: 0;
@@ -44,7 +46,30 @@ input {
     color: white;
     z-index: 1;
 }
-
+.top_bar_menu_responsive {
+    display: none;
+    background-color: var(--cor-secundaria);
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    height: 20vh;
+    position: fixed;
+}
+.top_bar_menu_responsive .logo {
+    width: 10vw;
+}
+.btn_close_menu {
+    display: none;
+    position: fixed;
+    top: 40px;
+    right: 40px;
+    border: none;
+    background-color: transparent;
+    color: var(--cor-principal);
+    z-index: 1000;
+    font-size: 3em;
+    font-weight: bold;
+}
 .bgMenu {
     background-color: #1B2431;
     width: 100%;
@@ -66,6 +91,24 @@ input {
 
 .menu .logo {
     width: 60px;
+}
+
+.icon_btn_menu {
+    height: 10vh;
+    cursor: pointer;
+    filter: invert(1000%);
+    transition: .5s;
+    display: none;
+    margin-left: 10vw;
+}
+
+.icon_btn_menu:hover {
+    filter: invert(70%);
+}
+
+.icon_btn_menu:active {
+    transform: scale(0.9);
+    filter: invert(50%);
 }
 
 .menu a {
@@ -230,15 +273,56 @@ input {
 
 /*RESPONSIVIDADE*/
 /*MENU*/
-@media only screen and (min-width: 600px) {
-    
+@media (max-width: 1016px) {
+    .top_bar_menu_responsive {
+        display: flex;
+    }
+    .menu .logo {
+        width: 5em;
+    }
+
+    .btn_close_menu {
+        display: block;
+    }
+    .bgMenu {
+        display: none;
+    }
+    .menu {
+        position: fixed;
+        transition-duration: 1s;
+        width: 100%;
+        height: 100%;
+        color: white;
+        z-index: 1;
+        background-color: #000;
+        transform: translateX(-1000px);
+    }
+    .icon_btn_menu {
+        display: block;
+    }
+
+    .menu ul {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        flex-direction: column;
+        margin: 0 auto;
+        width: 70%;
+        height: 70%;
+        list-style: none;
+        padding: 30px 0px;
+    }
+
+    .menu ul li a{
+        font-size: 1.5em;
+    }
 }
 
 /*FOOTER*/
-@media only screen and (min-width: 600px) {
+@media  (max-width: 600px) {
     .footer {
-        width: 769px;
-        height: 830px;
+        width: 100vw;
+        height: 180vh;
         margin-top: 25px;
     }
 
@@ -246,6 +330,10 @@ input {
         height: 240px;
         display: block;
         margin: 25px 20px 20px 7px;
+    }
+
+    .footer .footer-bottom {
+        height: 10vh;
     }
 
     .footer .footer-content img {
