--- a/Sites/site_institucional/css/sobre.css
+++ b/Sites/site_institucional/css/sobre.css
@@ -277,7 +277,7 @@ Time MIND6
     color: #f2f2f2;
 }
 
-@media only screen and (min-width: 600px) {
+@media (max-width: 600px) {
     .laboratorio {
         height: 498px;
         width: 770px;
