Adicionando sistema de alertas e mudando layouts e estilizações de tabelas

--- a/Sites/Dashboard_new/public/css/header.css
+++ b/Sites/Dashboard_new/public/css/header.css
@@ -5,7 +5,16 @@
     background-color: white;
     border-bottom: rgb(206, 206, 206) 1px solid;
 }
+input, button, img {
+    outline: none;
+}
+button {
 
+    transition-duration: .5s;
+}
+button:active {
+    transform: scale(0.9);
+}
 ul{
     float: left;
 }
