--- a/Sites/Dashboard_new/public/css/visaoMaquina.css
+++ b/Sites/Dashboard_new/public/css/visaoMaquina.css
@@ -32,6 +32,8 @@ html {
     height: 40px;
 }
 
+
+
 #container__div-pesquisa {
     width: 87%;
     margin-top: 50px;
@@ -82,7 +84,7 @@ html {
 .container-graficos__div-configuracao {
     background-color: white;
     border: rgb(51, 51, 51) 1px solid;
-    height: 250px;
+    height: 280px;
     width: 18%;
     border-radius: 10px;
 }
@@ -150,12 +152,14 @@ html {
 
 #container-graficos__div-mediaCpu {
     width: 95%;
-    height: 280px;
+    padding-right: 20px;
+    height: 320px;
 }
 
 #container-graficos__div-tempCpu {
     width: 95%;
-    height: 280px;
+    height: 320px;
+    padding-right: 20px;
     float: right;
 }
 
@@ -203,10 +207,16 @@ th {
 
 tr {
     text-align: center;
+    transition-duration: .5s;
 }
 
 tr:nth-child(even) {
     background-color: #f2f2f2;
+}
+
+.tr-maquina:hover td {
+    transition-duration: .5s;
+    background-color: #a2c1ff;
 }
 
 @media (max-width: 868px) {
