--- a/Sites/site_institucional/css/controlTec.css
+++ b/Sites/site_institucional/css/controlTec.css
@@ -152,3 +152,36 @@ lottie-player {
 .time {
     margin-left: 177px;
 }
+
+/*REPONSIVIDADE*/
+@media (min-width: 600px) {
+    .infoProject {
+        height: 345px;
+    }
+
+    .project1 h1 {
+        font-size: 50px;
+    }
+
+    .cards {
+        grid-template-columns: 1fr;
+    }
+
+    .cards img {
+        margin-top: 10px;
+    }
+
+    .card {
+        margin: 28px 10px;
+        height: 233px;
+    }
+
+    .g-1 p {
+        margin: -11px 10px;
+    }
+
+    .cardsv {
+        grid-template-columns: 1fr;
+        margin: 10% auto;
+    }
+}
