--- a/Sites/site_institucional/css/index.css
+++ b/Sites/site_institucional/css/index.css
@@ -37,6 +37,11 @@ html {
     text-align: justify;
 }
 
+img.imgMind {
+    width: 42vw;
+    margin: 20px 20px 20px 37px;
+}
+
 .cardHome {
     width: 90%;
     margin: auto;
@@ -162,7 +167,7 @@ html {
     .cardHome {
         display: grid;
         grid-template-columns: 1fr;
-        margin: 55px;
+        margin: 30px 20px 20px 63px;
     }
 
     .home-g1 {
@@ -171,7 +176,7 @@ html {
 
     img.imgMind {
         width: 482px;
-        margin-top: 20px;
+        margin: 20px 20px 20px 2px;
     }
 
     .CardVant h1 {
@@ -192,35 +197,32 @@ html {
     }
 
     .cardcontroltec img {
-        width: 519px;
+        width: 285px;
     }
 }
 
 @media only screen and (max-width: 768px) {
     .laboratorio {
-        height: 390px;
+        height: 448px;
     }
 
     .laboratorio div {
-        background: rgba(0, 0, 0, 0);
-        text-align: center;
+        height: 309px;
     }
 
     .cor h1 {
-        margin-top: 30px;
-        font-size: 5vw;
-        text-shadow: 4px 1px black;
-        color: #ffffff;
+        margin-top: 70px;
     }
 
     .cor button {
         margin-top: 30px;
     }
 
+
     .cardHome {
         display: grid;
         grid-template-columns: 1fr;
-        margin: 77px;
+        margin: 30px 20px 20px 70px;
     }
 
     .home-g1 {
@@ -228,16 +230,8 @@ html {
     }
 
     img.imgMind {
-        width: 615px;
-        margin-top: 20px;
-    }
-
-    .CardVant h1 {
-        margin-top: 50px;
-    }
-
-    .cardcontroltec {
-        margin: 40px 40px 80px 40px;
+        width: 80vw;
+        margin: 20px 20px 20px 1px;
     }
 
     .cardcontroltec {
@@ -245,16 +239,21 @@ html {
         grid-template-columns: 1fr;
     }
 
-    .controltec-g1 {
-        margin-bottom: 25px;
+    .CardVant h1 {
+        margin-top: 80px;
+    }
+
+    .cardcontroltec {
+        margin: 35px 83px 90px 83px;
     }
 
     .cardcontroltec img {
-        width: 680px;
+        margin: 0px 20px 31px 77px;
+        width: 440px;
     }
 }
 
-@media only screen and (max-width: 992px) {
+/* @media only screen and (max-width: 992px) {
     .laboratorio div {
         height: 522px;
     }
@@ -306,4 +305,4 @@ html {
         width: 680px;
         margin-left: 117px;
     }
-}
+} */
