--- a/Sites/site_institucional/css/menu.css
+++ b/Sites/site_institucional/css/menu.css
@@ -345,9 +345,9 @@ input {
 }
 
 /*FOOTER*/
-@media (max-width: 600px) {
+@media only screen and (max-width: 600px) {
     .footer {
-        height: 115vh;
+        height: 90vh;
     }
 
     .footer .footer-content {
