--- a/Sites/site_institucional/css/index.css
+++ b/Sites/site_institucional/css/index.css
@@ -38,8 +38,8 @@ html {
 }
 
 img.imgMind {
-    width: 42vw;
-    margin: 20px 20px 20px 37px;
+    width: 43vw;
+    margin: 20px -4px 20px 35px;
 }
 
 .cardHome {
@@ -131,9 +131,6 @@ img.imgMind {
 .cardcontroltec {
     display: grid;
     grid-template-columns: 1fr 1fr;
-}
-
-.cardcontroltec {
     margin: 100px 90px 90px 77px;
 }
 
@@ -142,10 +139,140 @@ img.imgMind {
     text-align: justify;
 }
 
-/*RESPONSIVIDADE*/
-@media only screen and (max-width: 600px) {
+/* ========== RESPONSIVIDADE ========== */
+@media (min-width: 1200px) {
     .laboratorio {
-        height: 390px;
+        height: 100vh;
+    }
+
+    .laboratorio div {
+        height: 79vh;
+        width: 100vw;
+    }
+
+    .cardHome {
+        margin: 15px 0px 30px 55px;
+    }
+
+    img.imgMind {
+        width: 44vw;
+        margin: 60px 0px 20px 30px;
+    }
+}
+
+@media (min-width: 992px) {
+    .laboratorio {
+        height: 100vh;
+    }
+
+    .laboratorio div {
+        height: 79vh;
+        width: 100vw;
+    }
+
+    .cardHome {
+        display: grid;
+        grid-template-columns: 1fr;
+        margin: 15px 0px 30px 48px;
+    }
+
+    img.imgMind {
+        width: 50vw;
+        margin: 20px 0px 20px 185px;
+    }
+
+    .cardcontroltec {
+        display: grid;
+        grid-template-columns: 1fr;
+        margin: 40px 90px 90px 77px;
+    }
+
+    .cardcontroltec img {
+        width: 450px;
+        margin: auto 20vw;
+    }
+
+    .controltec-g1 p {
+        font-size: 17px;
+        margin-top: 20px;
+        text-align: justify;
+    }
+
+}
+
+@media (min-width: 768px) {
+    .laboratorio {
+        width: 100vw;
+        background: url(../img/laboratorio-edit.jpg) center top no-repeat;
+        background-size: 100%;
+        background-attachment: fixed;
+        height: 75vh;
+    }
+
+    .laboratorio div {
+        background: rgba(0, 0, 0, 0.5);
+        height: 54vh;
+        width: 100vw;
+        text-align: center;
+    }
+
+    .cor h1 {
+        margin-top: 60px;
+        font-size: 4vw;
+        color: white;
+    }
+
+    .cor button {
+        width: 140px;
+        height: 50px;
+        color: white;
+        margin-top: 35px;
+        border: none;
+        cursor: pointer;
+        background-color: var(--cor-terciaria);
+        font-size: 20px;
+        border-radius: 10px;
+        font-weight: bold;
+    }
+
+    .cardHome {
+        display: grid;
+        grid-template-columns: 1fr;
+        margin: 2vw 8.3vw;
+    }
+
+    .home-g1 {
+        width: 83vw;
+    }
+
+    img.imgMind {
+        width: 83vw;
+        margin: 20px 0px 20px 0px;
+    }
+
+    .CardVant h1 {
+        margin-top: 12vw;
+    }
+
+    /* .cardcontroltec {
+        margin: 40px 40px 80px 40px;
+    } */
+
+    .cardcontroltec {
+        display: grid;
+        grid-template-columns: 1fr;
+        margin: 35px 50px 90px 50px;
+    }
+
+    .cardcontroltec img {
+        margin: 0px 30px 31px 80px;
+        width: 65vw;
+    }
+}
+
+@media (max-width: 600px) {
+    .laboratorio {
+        height: 60vw;
     }
 
     .laboratorio div {
@@ -184,125 +311,23 @@ img.imgMind {
     }
 
     .cardcontroltec {
+        display: grid;
+        grid-template-columns: 1fr;
         margin: 40px 40px 80px 40px;
     }
 
-    .cardcontroltec {
-        display: grid;
-        grid-template-columns: 1fr;
-    }
-
-    .controltec-g1 {
-        margin-bottom: 25px;
-    }
+    /* .cardcontroltec {
+        margin: 35px 50px 90px 50px;
+    } */
 
     .cardcontroltec img {
-        width: 285px;
-    }
-}
-
-@media only screen and (max-width: 768px) {
-    .laboratorio {
-        height: 448px;
-    }
-
-    .laboratorio div {
-        height: 309px;
-    }
-
-    .cor h1 {
-        margin-top: 70px;
-    }
-
-    .cor button {
-        margin-top: 30px;
-    }
-
-
-    .cardHome {
-        display: grid;
-        grid-template-columns: 1fr;
-        margin: 30px 20px 20px 70px;
-    }
-
-    .home-g1 {
-        width: 80vw;
-    }
-
-    img.imgMind {
-        width: 80vw;
-        margin: 20px 20px 20px 1px;
-    }
-
-    .cardcontroltec {
-        display: grid;
-        grid-template-columns: 1fr;
-    }
-
-    .CardVant h1 {
-        margin-top: 80px;
-    }
-
-    .cardcontroltec {
-        margin: 35px 83px 90px 83px;
-    }
-
-    .cardcontroltec img {
-        margin: 0px 20px 31px 77px;
+        margin: 0px 20px 31px 22px;
         width: 440px;
     }
 }
 
-/* @media only screen and (max-width: 992px) {
-    .laboratorio div {
-        height: 522px;
-    }
 
-    .cor h1 {
-        margin-top: 120px;
-        font-size: 5vw;
-    }
 
-    .cor button {
-        width: 165px;
-        height: 65px;
-        font-size: 25px;
-    }
+}
 
-    .cardHome {
-        display: grid;
-        grid-template-columns: 1fr;
-        margin: 100px;
-    }
-
-    .home-g1 {
-        width: 80vw;
-    }
-
-    .home-g1 {
-        width: 80vw;
-    }
-
-    img.imgMind {
-        width: 80vw;
-        margin-top: 20px;
-    }
-
-    .cardcontroltec {
-        margin: 40px 40px 80px 40px;
-    }
-
-    .cardcontroltec {
-        display: grid;
-        grid-template-columns: 1fr;
-    }
-
-    .controltec-g1 {
-        margin-bottom: 30px;
-    }
-
-    .cardcontroltec img {
-        width: 680px;
-        margin-left: 117px;
-    }
-} */
+*/
