Adicionando sistema de blacklist da escola

--- a/Sites/Dashboard_new/public/css/visaoMaquina.css
+++ b/Sites/Dashboard_new/public/css/visaoMaquina.css
@@ -220,6 +220,10 @@ tr:nth-child(even) {
     background-color: #a2c1ff;
 }
 
+.container-blacklist_computador {
+    height: 80vh;
+}
+
 @media (max-width: 868px) {
     .machines__reports__selectors {
         flex-direction: column;
